Window size on iphone fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -76,6 +76,7 @@ button {
   flex-direction: column;
   align-items: center;
   margin: 0 0.75em;
+  background-color: cyan;
 }
 
 .header {
